# SiameseNet-ros

./: CMakeLists.txt  LICENSE  package.xml  readme  readme.md
launch/: siameseNet.launch
src/: imgClient.py  networks.py  siameseNet.py
srv/: siameseSrv.srv
